[tool.poetry]
name = "pynight"
version = "0.2.2.1"
description = "My Python utility library."
authors = ["NightMachinary <rudiwillalwaysloveyou@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
brish = "^0.3.3"
dnspython = "^2.1.0"
executing = "^1.2.0"
pyperclip = "^1.8.2"
openai = "^0.27.2"
tiktoken = "^0.3.3"
spacy = "^3.5.1"
matplotlib = "^3.7.1"
aiofile = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
semantic-scholar-get = 'pynight.common_ss:main'

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
